objects/Forecast_Snapshots__c.object
<CustomObject>
    <description>Custom object which holds the Analytical Snapshots from source reports (Ian Brown)</description>
    <label>Forecast Snapshot</label>
    <nameField>
        <label>Forecast_ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Forecast Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Won__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Won</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WinRate__c</fullName>
        <label>WinRate</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OppCount__c</fullName>
        <label>OppCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Top200Desc__c</fullName>
        <label>Top200Desc</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Date__c</fullName>
        <label>Forecast Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Snapshot_Name__c</fullName>
        <label>Snapshot Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Terms__c</fullName>
        <label>Shipping Terms</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_Name__c</fullName>
        <label>Territory Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sub_PL_Category__c</fullName>
        <label>Sub PL Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Comment__c</fullName>
        <label>Override Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Running_User__c</fullName>
        <label>Snapshot Running User</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Forecast_Category_Actual__c</fullName>
        <label>Forecast Category Actual</label>
        <length>15</length>
        <type>Text</type>
    </fields>
</CustomObject>